--- a/Mission24_votePage/static/users/css/login.css
+++ b/Mission24_votePage/static/users/css/login.css
@@ -87,6 +87,77 @@ input:focus {
   border: none;
 }
 
+.loginContent {
+  display:flex;
+  flex-direction:column;
+  align-items: center;
+  width: 700px;
+  height: 358px;
+  margin-top:3.5rem
+}
+
+.loginContent-img {
+  width: 700px;
+  height: 228px;
+}
+
+.UniversityCard {
+  float:left;
+  width: 152px;
+  height: 228px;
+  background-size:cover;
+}
+
+.InformCard {
+  float:left;
+  margin-left:1rem;
+  width: 458px;
+  height: 228px;
+  border: 1px solid #718096;
+}
+
+.textGradient{
+  background: #ffffff;
+  background: -webkit-linear-gradient(rgba(255, 255, 255, 0.8), #ffffff);
+  background:    -moz-linear-gradient(rgba(255, 255, 255, 0.8), #ffffff);
+  background:      -o-linear-gradient(rgba(255, 255, 255, 0.8), #ffffff);
+  background:         linear-gradient(rgba(255, 255, 255, 0.8), #ffffff);
+  -webkit-background-clip: text;
+          background-clip: text;
+  color: transparent;
+  font-weight: bold;
+}
+
+.textG1{
+  margin-left: 3rem;
+  margin-top: 4rem;
+  font-size: 22px;
+  font-weight: 600;
+}
+
+.textG2{
+  margin-left: 3rem;
+  margin-top: 1.3rem;
+  font-size: 33px;
+  font-weight: 600;
+}
+
+.textU1{
+  text-align: center;
+  margin-top: 3.2rem;
+  font-size: 14px;
+  font-weight: 500;
+  color: white;
+}
+
+.textU2{
+  text-align: center;
+  margin-top: 0.5rem;
+  font-size: 10px;
+  font-weight: 500;
+  color: white;
+}
+
 @media screen and (max-width: 767px) {
   .titleImg {
     width: 350px;
