--- a/Mission24_votePage/templates/users/register.html
+++ b/Mission24_votePage/templates/users/register.html
@@ -7,7 +7,7 @@
     <title>Mission24</title>
     <link
       rel="stylesheet"
-      href="/static/users/css/register.css"
+      href="../../static/users/css/register.css"
       type="text/css"
     />
   </head>
@@ -22,7 +22,7 @@
     <section class="main">
       <form class="form" action="">
         <div class="register-img">
-          <img src="/static/users/img/registerTitle.png" alt="register" />
+          <img src="../../static/users/img/registerTitle.png" alt="register" />
         </div>
         <label for="">팀명</label>
         <input class="text-input" type="text" required />
@@ -40,7 +40,7 @@
               <label for="file1">
                 <img
                   class="file-label-img"
-                  src="/static/users/img/Link.png"
+                  src="../../static/users/img/Link.png"
                   alt="upload"
                 />
                 페이지 Preview 등록
@@ -58,7 +58,7 @@
               <label for="file2">
                 <img
                   class="file-label-img"
-                  src="/static/users/img/Link.png"
+                  src="../../static/users/img/Link.png"
                   alt="upload"
                 />
                 페이지 Preview 등록
@@ -76,7 +76,7 @@
               <label for="file3">
                 <img
                   class="file-label-img"
-                  src="/static/users/img/Link.png"
+                  src="../../static/users/img/Link.png"
                   alt="upload"
                 />
                 페이지 Preview 등록
@@ -94,7 +94,7 @@
               <label for="file4">
                 <img
                   class="file-label-img"
-                  src="/static/users/img/Link.png"
+                  src="../../static/users/img/Link.png"
                   alt="upload"
                 />
                 페이지 Preview 등록
