--- a/Mission24_votePage/static/users/css/login.css
+++ b/Mission24_votePage/static/users/css/login.css
@@ -177,4 +177,37 @@ input:focus {
   .idInput {
     width: 300px;
   }
+  .InformCard {
+    float:left;
+    margin-left:1rem;
+    width: 300px;
+    height: 228px;
+    border: 1px solid #718096;
+  }
+  .loginContent {
+    margin-left:20px;
+    display:flex;
+    flex-direction:column;
+    align-items: center;
+    width: 500px;
+    height: 358px;
+    margin-top:3.5rem
+  }
+  .loginContent-img {
+    width: 500px;
+    height: 228px;
+  }
+  .textG1{
+    margin-left: 2rem;
+    margin-top: 4rem;
+    font-size: 16px;
+    font-weight: 600;
+  }
+  
+  .textG2{
+    margin-left: 2rem;
+    margin-top: 1.3rem;
+    font-size: 26px;
+    font-weight: 600;
+  }
 }
