--- a/Mission24_votePage/static/users/css/register.css
+++ b/Mission24_votePage/static/users/css/register.css
@@ -41,7 +41,7 @@ section {
   height: 100%;
   flex-direction: column;
   align-items: center;
-  margin-top: 4.5rem;
+  margin-top: 3.5rem;
 }
 
 form {
@@ -49,6 +49,16 @@ form {
   flex-direction: column;
   color: rgb(113, 128, 150);
 }
+
+.imgPointer {
+  cursor: pointer;
+}
+
+.alertWord {
+  font-weight: 300;
+  margin-top:0.5rem 
+}
+
 .text-input {
   border-radius: 10px;
   height: 40px;
@@ -63,6 +73,8 @@ form {
   margin-bottom: 2rem;
   padding-left: 20px;
   padding-right: 20px;
+  padding-top:15px;
+  padding-bottom: 15px;
 }
 .img-title {
   margin-bottom: 1rem;
@@ -125,6 +137,10 @@ form {
   display: flex;
   justify-content: center;
   margin-top: 1rem;
+}
+
+.labelClass {
+  margin-bottom: 1rem;
 }
 
 @media screen and (max-width: 767px) {
