--- a/Mission24_votePage/templates/users/register.html
+++ b/Mission24_votePage/templates/users/register.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ko">
+{% load static %}
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -7,45 +8,71 @@
     <title>Mission24</title>
     <link
       rel="stylesheet"
-      href="../../static/users/css/register.css"
+      href="{% static 'users/css/register.css' %}"
       type="text/css"
     />
   </head>
   <body>
     <nav class="nav">
-      <a href="./login.html" class="nav__home">MISSON24</a>
+      <a href="/" class="nav__home">MISSON24</a>
       <div class="nav__sub">
-        <a class="nav__sub__about">ABOUT</a>
-        <a class="nav__sub__login">LOGIN</a>
+        <a href="" class="nav__sub__about">ABOUT</a>
+        <a href="/logout" class="nav__sub__login">LOGOUT</a>
       </div>
     </nav>
     <section class="main">
-      <form class="form" action="">
+      <form class="form" action="." method="POST" enctype="multipart/form-data">
+        {% csrf_token %}
         <div class="register-img">
-          <img src="../../static/users/img/registerTitle.png" alt="register" />
+          <img class="imgPointer" src="{% static 'users/img/registerTitle.png' %}" onclick="javascript:location.href='.'" alt="register" />
+          <p class="alertWord"> 팀당 한 명(팀장)만 등록해주시기 바랍니다.</p>
         </div>
-        <label for="">팀명</label>
-        <input class="text-input" type="text" required />
-        <label for="">팀원</label>
-        <input class="text-input" type="text" required />
-        <label for="">한줄 소개</label>
-        <textarea class="large-text-input" type="text"></textarea>
+        <label class="labelClass" for="id_team_name">팀명</label>
+        <input
+          type="text"
+          class="form-control text-input"
+          id="id_team_name"
+          name="team_name"
+          value="{{team_name}}"
+          maxlength='17'
+        />
+        <label class="labelClass" for="id_team_members">팀원</label>
+        <input
+          type="text"
+          class="form-control text-input"
+          id="id_team_members"
+          name="team_members"
+          value="{{team_members}}"
+          maxlength='17'
+        />
+        <label class="labelClass" for="id_intro_text">소개 (300자 제한)</label>
+        <textarea
+          type="text"
+          class="form-control large-text-input"
+          id="id_intro_text"
+          name="intro_text"
+          maxlength='300'>{{intro_text}}</textarea>
 
         <div class="main-file-input-box">
           <div class="img-title">
-            이미지 업로드(이미지는 네 장까지 업로드 가능합니다.)
+            이미지 업로드 (이미지는 네 장까지 업로드 가능합니다.)
           </div>
           <div class="file-input-box">
             <div class="filebox">
-              <label for="file1">
+              <label for="id_image1">
                 <img
                   class="file-label-img"
-                  src="../../static/users/img/Link.png"
+                  src="{% static 'users/img/Link.png' %}"
                   alt="upload"
                 />
                 페이지 Preview 등록
               </label>
-              <input class="file-input" type="file" id="file1" required />
+              <input
+                type="file"
+                class="form-control file-input"
+                id="id_image1"
+                name="image1"
+              />
               <input
                 type="text"
                 class="upload-name"
@@ -53,17 +80,22 @@
                 placeholder="업로드한 이미지명"
                 disabled
               />
+
             </div>
             <div class="filebox">
-              <label for="file2">
+              <label for="id_image2">
                 <img
                   class="file-label-img"
-                  src="../../static/users/img/Link.png"
+                  src="{% static 'users/img/Link.png' %}"
                   alt="upload"
                 />
                 페이지 Preview 등록
               </label>
-              <input class="file-input" type="file" id="file2" />
+              <input 
+                type="file"
+                class="form-control file-input"
+                id="id_image2"
+                name="image2"/>
               <input
                 type="text"
                 class="upload-name"
@@ -72,16 +104,22 @@
                 disabled
               />
             </div>
+
             <div class="filebox">
-              <label for="file3">
+              <label for="id_image3">
                 <img
                   class="file-label-img"
-                  src="../../static/users/img/Link.png"
+                  src="{% static 'users/img/Link.png' %}"
                   alt="upload"
                 />
                 페이지 Preview 등록
               </label>
-              <input class="file-input" type="file" id="file3" />
+              <input 
+                type="file"
+                class="form-control file-input"
+                id="id_image3"
+                name="image3"
+              />
               <input
                 type="text"
                 class="upload-name"
@@ -89,17 +127,23 @@
                 placeholder="업로드한 이미지명"
                 disabled
               />
+
             </div>
             <div class="filebox">
-              <label for="file4">
+              <label for="id_image4">
                 <img
                   class="file-label-img"
-                  src="../../static/users/img/Link.png"
+                  src="{% static 'users/img/Link.png' %}"
                   alt="upload"
                 />
                 페이지 Preview 등록
               </label>
-              <input class="file-input" type="file" id="file4" />
+              <input
+                type="file"
+                class="form-control file-input"
+                id="id_image4"
+                name="image4"
+              />
               <input
                 type="text"
                 class="upload-name"
@@ -111,33 +155,39 @@
           </div>
         </div>
         <div class="submit-button-box">
-          <button class="submit-button" type="submit">등록하기</button>
+          <button class="submit-button" type="submit">
+            {% if num == 0 %}
+            등록하기
+            {% else %}
+            수정하기
+            {% endif %}
+          </button>
         </div>
       </form>
     </section>
   </body>
   <script src="http://code.jquery.com/jquery-latest.min.js"></script>
   <script>
-    $("#file1").on("change", function () {
-      var fileName = $("#file1")
+    $("#id_image1").on("change", function () {
+      var fileName = $("#id_image1")
         .val()
         .replace(/C:\\fakepath\\/i, "");
       $("#upload-name-1").val(fileName);
     });
-    $("#file2").on("change", function () {
-      var fileName = $("#file2")
+    $("#id_image2").on("change", function () {
+      var fileName = $("#id_image2")
         .val()
         .replace(/C:\\fakepath\\/i, "");
       $("#upload-name-2").val(fileName);
     });
-    $("#file3").on("change", function () {
-      var fileName = $("#file3")
+    $("#id_image3").on("change", function () {
+      var fileName = $("#id_image3")
         .val()
         .replace(/C:\\fakepath\\/i, "");
       $("#upload-name-3").val(fileName);
     });
-    $("#file4").on("change", function () {
-      var fileName = $("#file4")
+    $("#id_image4").on("change", function () {
+      var fileName = $("#id_image4")
         .val()
         .replace(/C:\\fakepath\\/i, "");
       $("#upload-name-4").val(fileName);
