--- a/Mission24_votePage/templates/users/Django_assess_detail.html
+++ b/Mission24_votePage/templates/users/Django_assess_detail.html
@@ -19,7 +19,7 @@
         <a href="/logout" class="nav__sub__login">LOGOUT</a>
       </div>
     </nav>
-    <section>
+    <section class="section-box">
       <div class="title-box">
         <div>PEER GROUP 평가하기</div>
         <div>2/24</div>
