--- a/Mission24_votePage/static/users/css/Django_assess_detail.css
+++ b/Mission24_votePage/static/users/css/Django_assess_detail.css
@@ -183,6 +183,10 @@ input[type="radio"]:checked {
   .section-box {
     height: 85vh;
   }
+  .main-box {
+    height: 80vh;
+    padding-bottom: 0;
+  }
   .main-box__content-box {
     display: flex;
     flex-direction: column;
@@ -192,8 +196,9 @@ input[type="radio"]:checked {
   }
 
   .content-intro-box {
+    width: 100%;
+    height: 100%;
     margin-bottom: 20px;
-    margin-top: 20px;
   }
   .content-intro__title {
     margin: 20px;
@@ -227,6 +232,9 @@ input[type="radio"]:checked {
   }
   .main-box__title {
     font-size: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
   .move-button {
     font-size: 10px;
