--- a/Mission24_votePage/static/users/css/assess.css
+++ b/Mission24_votePage/static/users/css/assess.css
@@ -49,7 +49,7 @@ section {
   margin-left: 4rem;
 }
 
-.upword a{
+.upword a {
   color: rgb(255, 255, 255);
   font-weight: 500;
 }
@@ -63,20 +63,21 @@ section {
   line-height: 2;
 }
 
-.forloopCount{
-  width: 50px;
+.forloopCount {
+  width: 15vw;
   margin-left: 4rem;
+  font-size: 20px;
 }
 
-.teamName{
+.teamName {
   width: 1020px;
   text-align: left;
   margin-left: 5.5rem;
 }
 
-.iconHuman{
+.iconHuman {
   width: 3rem;
-
+  margin-right: 30px;
 }
 
 .button-Div {
@@ -91,11 +92,10 @@ section {
 .button-Div__button {
   display: flex;
   align-items: center;
-  width: 1300px;
+  width: 90vw;
   height: 80px;
   border-radius: 10px;
   background-color: rgb(217, 217, 217);
-  color: rgb(0, 0, 0);
   font-weight: 600;
   font-size: 22px;
   text-align: center;
@@ -111,21 +111,16 @@ section {
 
 /* 말풍선 적절한 top 과 margin-left 로 위치조정 */
 .arrow_box {
-  display: none;
-  width: 400px;
-  text-align: right;
-  margin-left: -480px;
-  color: #333;
-}
-
-img:hover + p.arrow_box {
   display: block;
+  width: 800px;
+  text-align: right;
+  margin-right: 50px;
+  color: #d9d9d9;
 }
 
-
-
-
-
+/* img:hover  p {
+  color: black;
+} */
 
 @media screen and (max-width: 767px) {
   .titleImg {
@@ -147,8 +142,8 @@ img:hover + p.arrow_box {
     width: 110px;
     margin-right: 30px;
   }
-  .forloopCount{
-    width: 40px
+  .forloopCount {
+    width: 40px;
   }
   .arrow_box {
     display: none;
@@ -162,23 +157,51 @@ img:hover + p.arrow_box {
     -webkit-border-radius: 8px;
     -moz-border-radius: 8px;
     border-radius: 8px;
-    background: #333;
-    color: #fff;
+    background: green;
+    color: yellow;
     font-size: 14px;
   }
-  
+
   .arrow_box:after {
     position: absolute;
     bottom: 100%;
-    left: 50%;
-    width: 0;
-    height: 0;
+    left: 100%;
+    width: 100px;
+    height: 100px;
     margin-left: -10px;
     border: solid transparent;
-    border-color: rgba(51, 51, 51, 0);
-    border-bottom-color: #333;
-    border-width: 10px;
+    border-color: blue;
+    border-bottom-color: red;
+    border-width: 100px;
     pointer-events: none;
-    content: ' ';
+    content: " ";
+  }
+  .upword {
+    font-size: 25px;
+    margin-left: 25px;
+  }
+  .middleword {
+    margin-left: 25px;
+  }
+  .button-Div {
+    margin-top: 0;
+    text-align: center;
+  }
+  .button-Div__button {
+    width: 90vw;
+    display: flex;
+    justify-content: space-between;
+  }
+  .forloopCount {
+    width: 60px;
+    margin-left: 0;
+  }
+  .teamName {
+    margin-left: 20px;
+    margin-right: 5px;
+    font-size: 15px;
+  }
+  .iconHuman {
+    margin-right: 30px;
   }
 }
