--- a/Mission24_votePage/templates/users/assess.html
+++ b/Mission24_votePage/templates/users/assess.html
@@ -40,13 +40,13 @@
 
                       
                     </a>
-                    <img
-                      class="iconHuman"
-                      src="{% static 'users/img/iconHuman.png' %}"
-                      alt="사람 아이콘"
-                    />
                     <p class="arrow_box">{{list.team_members}}</p>
-                </div>
+                    <img
+                    class="iconHuman"
+                    src="{% static 'users/img/iconHuman.png' %}"
+                    alt="사람 아이콘"
+                    />
+                </div>   
             </a>
         {% endfor %}
         </div>
@@ -57,6 +57,7 @@
       alert('최대 5개까지 투표 가능합니다.');
     </script>
     {% endfor %}
+    <script src="https://code.jquery.com/jquery-latest.min.js"></script>
     <script>
       window.addEventListener( "pageshow", function ( event ) {
         var historyTraversal = event.persisted || ( typeof window.performance != "undefined" && window.performance.navigation.type === 2 );
@@ -65,6 +66,16 @@
           window.location.reload();
         }
       });
+     $('.iconHuman').mouseover(function(){
+     
+     $this = $(this);
+     $this.prev().css("color","red");
+     })
+     $('.iconHuman').mouseout(function(){
+     
+     $this = $(this);
+     $this.prev().css("color","#d9d9d9");
+     })
     </script>
   </body>
 </html>
